src/objects/UM_WebService_Status_Code__mdt.object
<CustomObject>
    <description>This custom metadata is used to store the status codes along with Status and error message for each status code. These status codes can be used by webservices developed by SFDC.</description>
    <fields>
        <fullName>UM_Error_Message__c</fullName>
        <description>Error message in detail</description>
        <label>Error Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UM_Status_Code__c</fullName>
        <description>3 Digit status code, should be unique in the list</description>
        <label>Status Code</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Status__c</fullName>
        <description>Actual status, Success / Fail / any other</description>
        <label>Status</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>WebService Status Code</label>
    <pluralLabel>WebService Status Codes</pluralLabel>
</CustomObject>